# lancedb.mojo

./: .gitignore  README.md  moon.yml  pixi.toml
ffi/: Cargo.toml  build.sh
ffi/src/: lib.rs
src/: lancedb.mojo  lancedb_test.mojo
test/: delete_test.mojo  lancedb_test.mojo
